@@ -24,7 +24,7 @@ import java.util.Iterator;
 
 import org.junit.Assert;
 
-import org.apache.commons.lang.StringUtils;
+import org.apache.commons.lang3.StringUtils;
 
 import org.apache.pig.ExecType;
 import org.apache.pig.data.Tuple;
